--- a/website/main/templates/main/home.html
+++ b/website/main/templates/main/home.html
@@ -11,7 +11,12 @@
                     <p>{{ post.description }}</p>
                 </div>
                 <div>
-                    Buttons
+                    {% if user == post.author %}
+                        <form method='post'>
+                            {% csrf_token %}
+                            <button type='submit' class='btn btn-danger' name='post-id' value='{{ post.id }}'>Delete</button>
+                        </form>
+                    {% endif %}
                 </div>
             </div>
             <div class='card-footer text-muted'>
